# Optitrack_Spoutcam

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  NOTICE.md  README.md
src/: main_camera.cpp  main_testpattern.cpp  spout_grayscale_sender.cpp  spout_grayscale_sender.h
